--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 <body>
     <nav>
         <ul>
-            <li>
-             <a href="">SOBRE</a>
+            <li> 
+             <a class="opcoes" href="">SOBRE</a>
             </li>
          <li> 
-            <a href="">SERVIÇOS</a>
+            <a class="opcoes" href="">SERVIÇOS</a>
          </li>
          <LI> 
-            <a href="">HORARIOS</a>
+            <a class="opcoes" href="">HORARIOS</a>
          </LI>
          <LI>
-            <a href="">CONTATO</a>
+            <a class="opcoes" href="">CONTATO</a>
          </LI>
          <LI>
-            <a href="">MODELOS</a>
+            <a class="opcoes" href="">MODELOS</a>
          </LI>
         </ul>
     </nav>
