--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="carrosel.css">
     <link rel="stylesheet" href="barra de navegação.css">
+    <link rel="stylesheet" href="index.css">
     <title>N'Dara Tranças</title>
 </head>
 <body>
   <nav>
         <ul>
             <li> 
-             <a class="opcoes" href="">SOBRE</a>
+             <a class="opcoes" href="#Sobre">SOBRE</a>
             </li>
          <li> 
-            <a class="opcoes" href="">SERVIÇOS</a>
+            <a class="opcoes" href="#Serviços">SERVIÇOS</a>
          </li>
          <LI> 
-            <a class="opcoes" href="">HORARIOS</a>
+            <a class="opcoes" href="#Horários">HORARIOS</a>
          </LI>
          <LI>
-            <a class="opcoes" href="">CONTATO</a>
+            <a class="opcoes" href="#Contato">CONTATO</a>
          </LI>
          <LI>
-            <a class="opcoes" href="">MODELOS</a>
+            <a class="opcoes" href="#Modelos">MODELOS</a>
          </LI>
         </ul>
     </nav>
@@ -39,7 +40,29 @@
   <button class="prev" onclick="mudarSlide(-1)">❮</button>
   <button class="next" onclick="mudarSlide(1)">❯</button>
 </div>
-
+<div class="progress-indicators">
+    <!-- Os quadrados vão ser gerados dinamicamente pelo JS -->
+</div>
+<div class="titulos" id="Sobre">
+   <h1>Sobre</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+<div class="titulos" id="Serviços">
+   <h1>Serviços</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+<div class="titulos" id="Horários">
+   <h1>Horários</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+<div class="titulos" id="Contato">
+   <h1>Contato</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+<div class="titulos" id="Modelos">
+   <h1>Modelos</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
 <script src="script.js"></script>
 <footer>
     <a href="https://www.instagram.com/ndara.trancas?igsh=MWh2b3hpcnRieW55eQ==">    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
