--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="carrosel.css">
     <link rel="stylesheet" href="barra de navegação.css">
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
     <title>N'Dara Tranças</title>
 </head>
 <body>
@@ -45,7 +46,24 @@
 </div>
 <div class="titulos" id="Sobre">
    <h1>Sobre</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>✨ Você sabe o que significa N’DARA? ✨
+
+N’Dara é um nome de origem africana que carrega um significado poderoso:
+“Rainha”, “aquela que tem força”, “mulher de luz”.
+
+Escolhi esse nome porque ele representa exatamente o que eu acredito e quero entregar através do meu trabalho:
+💛 Força
+🧡 Identidade
+💛 Ancestralidade
+🧡 Beleza com atitude
+
+N’Dara é mais do que um salão.
+É um espaço onde cada trancinha carrega respeito pela sua história.
+Onde cada detalhe celebra quem somos.
+Onde a autoestima é reconstruída com afeto, arte e representatividade.
+
+O nome é um manifesto:
+Você merece se sentir rainha todos os dias!!!</p>
 </div>
 <div class="titulos" id="Serviços">
    <h1>Serviços</h1>
