--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
   <img src="img/0nepiece.avif" class="slide active" alt="Imagem 1">
   <img src="img/anneshirley.avif" class="slide" alt="Imagem 2">
   <img src="img/catchmeattheballpark.avif" class="slide" alt="Imagem 3">
-  <img src="img/teogonia.avif" class="slide" alt="Imagem 4">
-  <img src="img/theanaware.avif" class="slide" alt="Imagem 5">
+  <img src="img/imagem_banner_1_completa.jpg" class="slide" alt="Imagem 4">
+  <img src="img/imagem_banner_2_completa.jpg" class="slide" alt="Imagem 5">
   <img src="img/thegorillago's.avif" class="slide" alt="Imagem 5">
-
+  
   <button class="prev" onclick="mudarSlide(-1)">❮</button>
   <button class="next" onclick="mudarSlide(1)">❯</button>
 </div>
