--- a/index.html
+++ b/index.html
@@ -18,15 +18,18 @@
          <li> 
             <a class="opcoes" href="#Serviços">SERVIÇOS</a>
          </li>
-         <LI> 
+         <li> 
             <a class="opcoes" href="#Horários">HORARIOS</a>
-         </LI>
+         </li>
          <LI>
             <a class="opcoes" href="#Contato">CONTATO</a>
-         </LI>
-         <LI>
+         </li>
+         <li>
             <a class="opcoes" href="#Modelos">MODELOS</a>
-         </LI>
+         </li>
+         <li>
+            <a class="opcoes" href="agendamento.html">AGENDAMENTO</a>
+         </li>
         </ul>
     </nav>
 
@@ -42,11 +45,10 @@
   <button class="next" onclick="mudarSlide(1)">❯</button>
 </div>
 <div class="progress-indicators">
-    <!-- Os quadrados vão ser gerados dinamicamente pelo JS -->
 </div>
-<div class="titulos" id="Sobre">
-   <h1>Sobre</h1>
-      <p>✨ Você sabe o que significa N’DARA? ✨
+<section class="sobre" id="Sobre">
+   <h2>Sobre</h2>
+      <pre>✨ Você sabe o que significa N’DARA? ✨
 
 N’Dara é um nome de origem africana que carrega um significado poderoso:
 “Rainha”, “aquela que tem força”, “mulher de luz”.
@@ -63,8 +65,8 @@ Onde cada detalhe celebra quem somos.
 Onde a autoestima é reconstruída com afeto, arte e representatividade.
 
 O nome é um manifesto:
-Você merece se sentir rainha todos os dias!!!</p>
-</div>
+Você merece se sentir rainha todos os dias!!!</pre>
+</section>
 <div class="titulos" id="Serviços">
    <h1>Serviços</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
