--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="carrosel.css">
     <link rel="stylesheet" href="barra de navegação.css">
@@ -10,6 +10,7 @@
     <title>N'Dara Tranças</title>
 </head>
 <body>
+   
   <nav>
         <ul>
             <li> 
@@ -23,9 +24,6 @@
          </li>
          <LI>
             <a class="opcoes" href="#Contato">CONTATO</a>
-         </li>
-         <li>
-            <a class="opcoes" href="#Modelos">MODELOS</a>
          </li>
          <li>
             <a class="opcoes" href="agendamento.html">AGENDAMENTO</a>
@@ -46,7 +44,7 @@
 </div>
 <div class="progress-indicators">
 </div>
-<section class="sobre" id="Sobre">
+<section class="estilizacao" id="Sobre">
    <h2>Sobre</h2>
       <pre>✨ Você sabe o que significa N’DARA? ✨
 
@@ -68,19 +66,28 @@ O nome é um manifesto:
 Você merece se sentir rainha todos os dias!!!</pre>
 </section>
 <div class="titulos" id="Serviços">
-   <h1>Serviços</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<section class="estilizacao">
+   <h2>Serviços</h2>
+      <pre>✨ Olá, seja bem-vinda ao N’Dara Tranças! ✨
+É um prazer receber você por aqui 💛
+Para facilitar, já deixamos a lista dos procedimentos que realizamos:
+🔸 Box braids
+🔸 Knotless
+🔸 Chanel braids
+🔸 Goddess braids
+🔸 Faux locs
+🔸 Twist (sem jumbo)
+🔸 Gypsy braids
+💬 Nos envie a opção desejada, junto com algumas referências (se tiver), para que possamos verificar agenda e valores.
+Obrigada pela confiança, e até breve no N’Dara! ✨</pre>
 </div>
+</section>
 <div class="titulos" id="Horários">
    <h1>Horários</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
 <div class="titulos" id="Contato">
    <h1>Contato</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<div class="titulos" id="Modelos">
-   <h1>Modelos</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
 <script src="script.js"></script>
